--- a/partials/nav.html
+++ b/partials/nav.html
@@ -80,7 +80,7 @@
 	  <li><a href="/docs/RS.pdf" target= "_blank">Prvi roditeljski sestanek v novem šolskem letu 2025_2026</a></li>
 	  <li><a href="/docs/Pomembne novosti v novem šolskem letu 2025_2026.pdf" target= "_blank">Pomembne novosti v novem šolskem letu 2025_2026</a></li>
       <li><a href="/docs/POR.doc" target="_blank">Poročilo LDN - 2024_2025</a></li>
-      <li><a href="/docs/LDNOS.doc" target="_blank">LDN za leto 2025_2026</a></li>
+      <li><a href="/docs/LDNOS.docx" target="_blank">LDN za leto 2025_2026</a></li>
       <li><a href="/docs/LDNV.doc" target="_blank">LDN vrtca za leto 2024_2025</a></li>
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
       <li><a href="/docs/PŠR.doc" target= "_blank">Pravila šolskega reda</a></li>
