--- a/partials/nav.html
+++ b/partials/nav.html
@@ -81,7 +81,7 @@
 	  <li><a href="/docs/Pomembne novosti v novem šolskem letu 2025_2026.pdf" target= "_blank">Pomembne novosti v novem šolskem letu 2025_2026</a></li>
       <li><a href="/docs/POROSVR2425.pdf" target="_blank">Poročilo LDN OŠ in Vrtec - 2024_2025</a></li>
       <li><a href="/docs/LDNOSF2526.pdf" target="_blank">LDN za leto 2025_2026</a></li>
-      <li><a href="/docs/LDNV2526.pdf target="_blank">LDN vrtca za leto 2025_2026</a></li>
+      <li><a href="/docs/LDNV2526.pdf" target="_blank">LDN vrtca za leto 2025_2026</a></li>
       <li><a href="/docs/HisniRedOSFara_17_18.pdf" target= "_blank">Hišni red</a></li>
       <li><a href="/docs/PŠR.pdf" target= "_blank">Pravila šolskega reda</a></li>
       <li><a href="/docs/VN2526.pdf" target= "_blank">Vzgojni načrt</a></li>
