--- a/partials/nav.html
+++ b/partials/nav.html
@@ -37,7 +37,7 @@
       <li><a href="/docs/DD2526.pdf" target="_blank">Dnevi dejavnosti 2025 - 2026</a></li>
       <li><a href="/docs/ŠP2526.pdf" target="_blank">Šolska pot 2025 - 2026</a></li>
       <li><a href="/docs/PROJ2526.pdf" target="_blank">Projekti 2025 - 2026</a></li>
-      <li><a href="/docs/DEC2526.pdf" target="_blank">Jedilnik DECEMBER 2025</a></li>  
+      <li><a href="/docs/JŠOJAN.pdf" target="_blank">Jedilnik JANUAR 2026</a></li>  
       <li><a href="/docs/PŠP.pdf" target="_blank">Pravilnik o šolski prehrani</a></li>
 	  <li><a href="/docs/NPZ26.pdf" target="_blank">Nacionalno preverjanje znanja 2026</a></li>
 		<li><a href="/docs/JV2526.pdf" target="_blank">Jutranje varstvo, podaljšano bivanje 2025 - 2026</a></li>
@@ -72,7 +72,7 @@
       <li><a href="/InformacijeVrtec.html">Informacije</a></li>
       <li><a href="/docs/Pravilnik o varnosti otrok.pdf" target="_blank">Pravilnik o varnosti otrok</a></li>
       <li><a href="/docs/Obrazci.pdf" target="_blank">Obrazci - vloge</a></li>
-      <li><a href="/docs/DEC2526.pdf">Jedilnik december 2025</a></li>
+      <li><a href="/docs/JPOJAN.pdf">Jedilnik januar 2026</a></li>
 
     </ul>
   </li>
